tema4/canary-istio-analysis/servicio-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: imagina-rollout
